--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#44bb88" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Corona Solidarité lutte contre l’isolement et l'inaccessibilité aux ressources de premières nécessités pour les personnes en difficultés en ces temps de crise."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
